src/assets/style.css
:root {
  --background-color: #f4f1ec;
  --foreground-color: #000000;
  --highlight-color: orangered;
  --box-border-radius: 3px;
  --media-border-radius: 8px;
  --dot-size: 8px;
  --shadows: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02),
    0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02);
  --box-margin: 10px;
  --border-color: rgba(0, 0, 0, 0.05);
  --link-color: var(--highlight-color);
  --icon-hover-filter: invert(51%) sepia(0%) saturate(0%) hue-rotate(23deg)
    brightness(90%) contrast(90%);
  --icon-secondary-filter: invert(97%) sepia(0%) saturate(0%) hue-rotate(129deg)
    brightness(86%) contrast(88%);
  --cell-background-color: #fff;
  --code-background-color: #f9f9f9;
  --secondary-color: #999;
}

body {
  background-color: var(--background-color);
  color: var(--foreground-color);
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
}

#wrapper {
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 0px;
  margin-bottom: 0px;
}

#modal {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 1000;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  backdrop-filter: blur(20px);
  -webkit-backdrop-filter: blur(20px);
  display: none;
}

#modal-img {
  margin: auto;
  max-width: calc(100% - 40px);
  max-height: calc(100% - 40px);
  border-radius: var(--media-border-radius);
  border: 1px solid var(--border-color);
  box-shadow: var(--shadows);
  cursor: pointer;
}

a:link,
a:visited {
  color: #778087;
  text-decoration: none;
  line-break: loose;
}

a:hover {
  color: #4d5256;
  text-decoration: underline;
  text-underline-offset: 0.2rem;
}

a.site-title:link,
a.site-title:visited {
  color: #333;
  text-decoration: none;
}

a.site-title:hover {
  color: #000;
  text-decoration: underline;
}

a.item-link:link,
a.item-link:visited {
  color: var(--link-color);
  text-decoration: none;
}

a.item-link:hover {
  text-decoration: underline;
}

#wrapper {
  display: flex;
  width: 100%;
  min-height: 100vh;
}

#container {
  display: flex;
  flex: 1;
  width: 100%;
  max-width: none;
  margin: 0;
}

#main-container {
  flex: 1;
  padding-top: 20px;
  padding-right: 30px;
  padding-bottom: 20px;
  padding-left: 30px;
  margin-right: 20px;
  border-right: 1px solid var(--border-color);
  overflow-x: auto;
}

#header {
  padding: 10px 10px 10px 10px;
  margin-bottom: 10px;
  font-weight: 600;
  display: flex;
  align-items: center;
}

.header-avatar {
  width: 40px;
  height: 40px;
  border-radius: 100%;
  border: 3px solid #fff;
  box-shadow: var(--shadows);
  display: block;
}

.header-title {
  flex: 1;
  font-size: 20px;
  margin-left: 10px;
  padding-right: 10px;
}

.header-icons {
  display: flex;
  align-items: center;
  gap: 10px;
}

.social-icon {
  width: 1em;
  height: 1em;
  vertical-align: bottom;
  filter: var(--icon-secondary-filter);
}

.social-icon:hover {
  filter: var(--icon-hover-filter);
}

#breadcrumb {
  padding: 10px 0px 10px 0px;
  margin-bottom: 20px;
  font-weight: 600;
  display: flex;
  align-items: center;
}

.breadcrumb-avatar {
  width: 20px;
  height: 20px;
  border-radius: 100%;
  border: 2px solid #fff;
  box-shadow: var(--shadows);
  display: block;
}

.breadcrumb-title {
  flex: 1;
  font-size: 14px;
  margin-left: 10px;
}

hr {
  border: none;
  height: 2px;
  color: var(--border-color);
  background-color: var(--border-color);
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.page-title {
  padding: 10px 10px 10px 10px;
  margin-bottom: 10px;
  font-weight: 600;
  font-size: 20px;
  line-height: 1;
}

#main-content {
  font-size: 17px;
  line-height: 24px;
}

#site-intro {
  padding: 10px 20px 10px 20px;
  background-color: #fff;
  font-size: 16px;
  line-height: 1.6;
  border-radius: var(--box-border-radius);
  box-shadow: var(--shadows);
  margin-bottom: 20px;
}

.section-title {
  font-size: 16px;
  font-weight: 600;
  padding: 0px 20px 0px 20px;
}

.items {
  margin-top: 20px;
  margin-left: 28px;
}

.item {
}

.image-box,
.video-box,
.audio-box,
.attachment-box {
  border-left: 2px solid var(--border-color);
  padding: 30px 0px 30px 30px;
  display: flex;
  margin-left: 3px;
}

.attachment-box {
  box-sizing: border-box;
  max-width: 100%;
  display: grid;
  align-items: center;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
}

.attachment-box img {
  width: 100%;
  aspect-ratio: 1/1;
  object-fit: cover;
  border-radius: var(--media-border-radius);
  border: 1px solid var(--border-color);
  box-shadow: var(--shadows);
}

.image-box > img {
  display: block;
  width: calc(100% - 1px);
  height: auto;
  max-height: initial;
  border-radius: var(--media-border-radius);
  margin-bottom: 10px;
  box-shadow: var(--shadows);
  border: 1px solid var(--border-color);
}

.video-box video {
  max-width: 100%;
  border-radius: var(--media-border-radius);
  box-shadow: var(--shadows);
  border: 1px solid var(--border-color);
}

audio::-webkit-media-controls-play-button {
  color: #000;
}

audio::-webkit-media-controls-panel {
  background-color: rgba(255, 255, 255, 0.05);
}

.audio-box audio {
  width: 100%;
  border-radius: var(--media-border-radius);
  box-shadow: var(--shadows);
  border: 1px solid var(--border-color);
  background-color: rgba(255, 255, 255, 0.05);
}

.title-box {
  border-left: 2px solid var(--border-color);
  padding: 30px 0px 0px 30px;
  font-size: 24px;
  line-height: 1.2;
  font-weight: 800;
  margin-left: 3px;
}

.title-box:last-child {
  padding-top: 30px;
  padding-bottom: 30px;
}

.tag-box {
  border-left: 2px solid var(--border-color);
  padding: 0px 0px 30px 30px;
  font-size: 14px;
  line-height: 1.6;
  margin-left: 3px;
  display: flex;
  gap: 8px;
  align-items: center;
}

.tag-box:last-child {
  padding-bottom: 20px;
}
/* ... */

